adicionando botao remover

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <img id="qrCode" style="display: none; margin-top: 20px;" alt="QR Code para login" />
             <p id="qrStatus" class="status-message">Clique para autenticar</p>
 
+            <button id="clearAuthButton" style="display: none;" onclick="clearAuthentication()"
+                aria-label="Limpar autenticação">Limpar Autenticação</button>
+
             <a href="../nomeReturn/index.html" class="btn" target="_blank">Converter Contatos</a>
         </div>
 
